# vanity-solana

./: .gitignore  CLAUDE.md  definition.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.css
src/components/: Generator.tsx  Header.tsx  Result.tsx  Stats.tsx
src/hooks/: useVanityGenerator.ts
src/lib/: estimation.ts  types.ts  validation.ts  worker-pool.ts
src/wasm-pkg/: package.json  vanity_solana_wasm.d.ts  vanity_solana_wasm.js  vanity_solana_wasm_bg.wasm  vanity_solana_wasm_bg.wasm.d.ts
src/workers/: vanity-worker.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
